<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/etItemName"
            android:hint="@string/item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <EditText
            android:id="@+id/etDate"
            android:text="@string/_24_04_2019"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <EditText
            android:id="@+id/etPrice"
            android:hint="@string/estimated_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <EditText
            android:id="@+id/etItemDesc"
            android:hint="@string/item_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <CheckBox
            android:id="@+id/cbBoughtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_status"
            android:textSize="15sp"/>


</LinearLayout>