<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="#BBF4FC"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <ImageView
                    android:id="@+id/imgCategory"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/food"
                    android:scaleType="fitXY"/>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:layout_marginLeft="20dp">
                <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#252323"
                        android:textSize="20sp"/>

                <!--<TextView-->
                <!--android:id="@+id/tvDate"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="24sp"/>-->

                <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#252323"
                        android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <CheckBox
                android:layout_marginTop="8dp"
                android:id="@+id/cbBought"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchase_status"
                android:textSize="15sp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center_horizontal">
            <Button
                    android:id="@+id/btnDelete"
                    android:text="@string/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btnEdit"
                    android:text="@string/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
                android:id="@+id/btnViewItemDetails"
                android:layout_gravity="center_horizontal"
                android:text="@string/view_item_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</android.support.v7.widget.CardView>